--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
                         </div>
                         <nav class="menu bg-blue">
                             <ul>
-                                <li><a href="about_us.html">關於我</a>
+                                <li><a href="404.html">關於我</a>
                                 </li>
-                                <li><a href="experience.html">學經歷</a>
+                                <li><a href="404.html">學經歷</a>
                                 </li>
-                                <li><a href="skills">技能專長</a>
+                                <li><a href="404.html">技能專長</a>
                                 </li>
-                                <li><a href="profile.html">作品</a>
+                                <li><a href="404.html">作品</a>
                                 </li>
                             </ul>
                         </nav>
@@ -303,12 +303,12 @@
                             <span>&copy; 2019 All rights reserved. 郭建昇JasonKuo</span>
                         </div>
                         <ul>
-                            <li><a class="link-aqua" href="#">關於我</a></li>
-                            <li><a class="link-aqua" href="#">學經歷</a></li>
-                            <li><a class="link-aqua" href="#">技能專長</a></li>
-                            <li><a class="link-aqua" href="#">作品</a></li>
-                            <li><a class="link-aqua" href="#"></a></li>
-                            <li><a class="link-aqua" href="#"></a></li>
+                            <li><a class="link-aqua" href="404.html">關於我</a></li>
+                            <li><a class="link-aqua" href="404.html">學經歷</a></li>
+                            <li><a class="link-aqua" href="404.html">技能專長</a></li>
+                            <li><a class="link-aqua" href="404.html">作品</a></li>
+                            <li><a class="link-aqua" href="404.html"></a></li>
+                            <li><a class="link-aqua" href="404.html"></a></li>
                         </ul>
                     </div>
                 </div>
