手機板修改

--- a/index.html
+++ b/index.html
@@ -162,67 +162,67 @@
                 </div>
                 <div class="col-xs-12 col-sm-12 col-md-9">
                     <div class="row">
-                        <div class="col-mob-12 col-xs-6 col-sm-4 col-md-2">
+                        <div class="col-mob-6 col-xs-6 col-sm-4 col-md-2">
                             <a class="contry-item">
                                 <img class="img-responsive" src="img/theme-1/html5.png" alt="">
                                 <h5>HTML5</h5>
                             </a>
                         </div>
-                        <div class="col-mob-12 col-xs-6 col-sm-4 col-md-2">
+                        <div class="col-mob-6 col-xs-6 col-sm-4 col-md-2">
                             <a class="contry-item">
                                 <img class="img-responsive" src="img/theme-1/css3.png" alt="">
                                 <h5>CSS3</h5>
                             </a>
                         </div>
-                        <div class="col-mob-12 col-xs-6 col-sm-4 col-md-2">
+                        <div class="col-mob-6 col-xs-6 col-sm-4 col-md-2">
                             <div class="contry-item">
                                 <img class="img-responsive" src="img/theme-1/JS.png" alt="">
                                 <h5>JS</h5>
                             </div>
                         </div>
-                        <div class="col-mob-12 col-xs-6 col-sm-4 col-md-2">
+                        <div class="col-mob-6 col-xs-6 col-sm-4 col-md-2">
                             <a class="contry-item">
                                 <img class="img-responsive" src="img/theme-1/ai.png" alt="">
                                 <h5>Illustrator</h5>
                             </a>
                         </div>
-                        <div class="col-mob-12 col-xs-6 col-sm-4 col-md-2">
+                        <div class="col-mob-6 col-xs-6 col-sm-4 col-md-2">
                             <a class="contry-item">
                                 <img class="img-responsive" src="img/theme-1/ps.png" alt="">
                                 <h5>Photoshop</h5>
                             </a>
                         </div>
-                        <div class="col-mob-12 col-xs-6 col-sm-4 col-md-2">
+                        <div class="col-mob-6 col-xs-6 col-sm-4 col-md-2">
                             <a class="contry-item">
                                 <img class="img-responsive" src="img/theme-1/dw.png" alt="">
                                 <h5>Dreamweaver</h5>
                             </a>
                         </div>
-                        <div class="col-mob-12 col-xs-6 col-sm-4 col-md-2">
+                        <div class="col-mob-6 col-xs-6 col-sm-4 col-md-2">
                             <a class="contry-item">
                                 <img class="img-responsive" src="img/theme-1/indesign.png" alt="">
                                 <h5>Indesign</h5>
                             </a>
                         </div>
-                        <div class="col-mob-12 col-xs-6 col-sm-4 col-md-2">
+                        <div class="col-mob-6 col-xs-6 col-sm-4 col-md-2">
                             <a class="contry-item">
                                 <img class="img-responsive" src="img/theme-1/php.png" alt="">
                                 <h5>PHP</h5>
                             </a>
                         </div>
-                        <div class="col-mob-12 col-xs-6 col-sm-4 col-md-2">
+                        <div class="col-mob-6 col-xs-6 col-sm-4 col-md-2">
                             <a class="contry-item">
                                 <img class="img-responsive" src="img/theme-1/python.png" alt="">
                                 <h5>Python</h5>
                             </a>
                         </div>
-                        <div class="col-mob-12 col-xs-6 col-sm-4 col-md-2">
+                        <div class="col-mob-6 col-xs-6 col-sm-4 col-md-2">
                             <a class="contry-item">
                                 <img class="img-responsive" src="img/theme-1/mysql.png" alt="">
                                 <h5>MySql</h5>
                             </a>
                         </div>
-                        <div class="col-mob-12 col-xs-6 col-sm-4 col-md-2">
+                        <div class="col-mob-6 col-xs-6 col-sm-4 col-md-2">
                             <a class="contry-item">
                                 <img class="img-responsive" src="img/theme-1/wordpress.png" alt="">
                                 <h5>Wordpress</h5>
@@ -239,7 +239,7 @@
             <div class="row">
                 <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
                     <div class="footer-block">
-                        <img src="img/theme-1/jason.jpg" alt="" class="logo-footer">
+                        <img src="img/theme-1/jason.jpg" alt="" class="logo-footer jason-footer" ></span>
                         <div class="f_text color-grey-7">大家好, 我是郭建昇JasonKuo, 私立正修科技大學 影像顯示科技學位學程學士畢業, 因為興趣使然朝資訊前後端發展, 目標為努力規劃跟完成每個專案, 隨時增進自己side project的作品與實力.</div>
                         
                     </div>
@@ -307,8 +307,6 @@
                             <li><a class="link-aqua" href="404.html">學經歷</a></li>
                             <li><a class="link-aqua" href="404.html">技能專長</a></li>
                             <li><a class="link-aqua" href="404.html">作品</a></li>
-                            <li><a class="link-aqua" href="404.html"></a></li>
-                            <li><a class="link-aqua" href="404.html"></a></li>
                         </ul>
                     </div>
                 </div>
